--- a/ARDicee/Base.lproj/Main.storyboard
+++ b/ARDicee/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--AR Dicee-->
         <scene sceneID="tXr-a1-R10">
             <objects>
                 <viewController id="BV1-FR-VrT" customClass="ViewController" customModule="ARDicee" customModuleProvider="target" sceneMemberID="viewController">
@@ -29,7 +29,12 @@
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="top" secondItem="U0K-SW-4ec" secondAttribute="top" id="rJc-2c-zQA"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="O6B-TE-PI5">
+                    <navigationItem key="navigationItem" title="AR Dicee" id="O6B-TE-PI5">
+                        <barButtonItem key="leftBarButtonItem" systemItem="trash" id="hUl-Rg-OXg">
+                            <connections>
+                                <action selector="removeAllDice:" destination="BV1-FR-VrT" id="UNB-Uj-iS7"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="u7v-7n-5dT">
                             <connections>
                                 <action selector="rollAgain:" destination="BV1-FR-VrT" id="HgH-fB-0Xt"/>
